--- a/index.html
+++ b/index.html
@@ -27,16 +27,26 @@
                     height: auto;
                     margin-top: 10%;
                 }
+                h1 {
+                    font-size: 1.5rem;  
+                }
+                
             }
             @media (max-width: 575px) { 
                 .carousel-item img {
                     margin-top: 7%;
+                }
+                h1 {
+                    font-size: 1.5rem;  
                 }
             }
 
             @media (max-width: 400px) { 
                 .carousel-item img {
                     margin-top: 10%;
+                }
+                h1 {
+                    font-size: 1.3rem;  
                 }
             }
         </style>
